<resources>
    <string name="app_name">TicToc</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_hint">Title</string>
    <string name="task_create_date">Date:</string>
    <string name="task_create_start_time">Start:</string>
    <string name="task_create_end_time">End:</string>
    <string name="task_create_repeating_period">Repeat</string>
    <string name="create_task_add">Add</string>
    <string name="tic_toc">Tic Toc</string>
    <string name="task_create_add_description">add description</string>
    <string name="task_create_positive">Add</string>
    <string name="task_create_negative">Cancel</string>
    <string name="description_hint">Description</string>
    <string name="touch_to_set">Touch To Set</string>
    <string name="apply">Apply</string>
    <string-array name="repeatModes">
        <item>No Repeat</item>
        <item>Every Day</item>
        <item>Every Week</item>
        <item>Every Month</item>
    </string-array>
</resources>
