<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/title_hint" />

    <Button
        android:id="@+id/buttonDatePick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_create_date" />

    <Button
        android:id="@+id/buttonStartTimePick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_create_start_time" />

    <Button
        android:id="@+id/buttonEndTimePick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_create_end_time" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:layout_height="wrap_content"
            android:text="@string/task_create_repeating_period"
            android:textSize="15sp" />
        <Spinner
            android:id="@+id/periodSpinner"
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <Button
        android:id="@+id/addTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/create_task_add" />
</LinearLayout>